kubernetes/apps/default/plex/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name plex
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
      services:
        - name: *name
          port: 32400
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
